// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Zoom should match snapshot 1`] = `
<div>
  <span
    style="transform: none; webkit-transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    Zoom Text
  </span>
</div>
`;

exports[`Zoom should match snapshot 2`] = `
<div>
  <span
    style="transform: scale(0); visibility: hidden;"
  >
    Zoom Text
  </span>
</div>
`;
